Fixed: issue with search string being too close to the "search" label.

--- a/src/_footer.css
+++ b/src/_footer.css
@@ -56,7 +56,7 @@ Footer
             left: 0;
             line-height: inherit;
             padding: inherit;
-            padding-left: 9ch;
+            padding-left: 10ch;
             position: absolute;
             top: 0;
             width: 100%;
